--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <img src=https://www.google.com/url?sa=i&url=https%3A%2F%2Ftenor.com%2Fview%2Fsexy-goat-goat-cabra-gif-23897181&psig=AOvVaw36RnKpDvCUJ91-DI2rTohp&ust=1694272659258000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwj1uarRp5uBAxUHX_EDHd1tC_AQjRx6BAgAEAw alt "profile Picture">
     <p>This is a paragraph</p>
     <ul>
-      <li>Iteam 1</li>
-      <li>Iteam 2</li>
-      <li>Iteams 3</li>  
+      <li>The amazing different personalities</li>
+      <li>the welcoming and unique environment</li>
+      <li>the abundance of knowledge from masters of there own unique crafts</li>  
     </ul>
     </body>
   </html>
