--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
      <h1>This is my page</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftenor.com%2Fview%2Fsexy-goat-goat-cabra-gif-23897181&psig=AOvVaw36RnKpDvCUJ91-DI2rTohp&ust=1694272659258000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwj1uarRp5uBAxUHX_EDHd1tC_AQjRx6BAgAEAw" alt "profile Picture">
+    <img src="https://media.giphy.com/media/cMso9wDwqSy3e/giphy.gif" alt="profile Picture">
     <p>This is a paragraph</p>
     <ul>
       <li>The amazing different personalities</li>
