--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
      <h1>This is my page</h1>
-    <img src="https://media.giphy.com/media/cMso9wDwqSy3e/giphy.gif" alt="profile Picture">
+    <img src="https://media.giphy.com/media/cMso9wDwqSy3e/giphy.gif" alt="profile">
     <p>This is a paragraph</p>
     <ul>
       <li>The amazing different personalities</li>
