--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
      <h1>This is my page</h1>
     <img src="https://media.giphy.com/media/cMso9wDwqSy3e/giphy.gif" alt="profile">
-    <p>This is a paragraph</p>
+    <p>I,Jaden Delerenzo Schroeder, enjoy alot of things like playing video games, coding, exercising, personal growth and coming up with creative solutions for problems </p>
     <ul>
       <li>The amazing different personalities</li>
       <li>the welcoming and unique environment</li>
