--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <h1>This is my page</h1>
     <img src="https://media.giphy.com/media/cMso9wDwqSy3e/giphy.gif" alt="profile">
     <p>I,Jaden Delerenzo Schroeder, enjoy alot of things like playing video games, coding, exercising, personal growth and coming up with creative solutions for problems </p>
+    <p>Everything i enjoyed about my visit at Platform 45</p>
     <ul>
       <li>The amazing different personalities</li>
       <li>the welcoming and unique environment</li>
