--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <style>
-      body{background-colour: brown}
+      body{background-colour:"#6F4E37"}
       h1{colour:yellow}
-      p{color: red}
+      p{color: black }
     </style>
   </head>
   <body>
